# hotfixGen

./: .gitignore  DESIGN.md  README.md  hf.ps1  index.html  package-lock.json  package.json  release-ci.ps1  release.ps1  vite.config.mjs
.claude/: settings.local.json
.claude/skills/frontend-design/: SKILL.md
.github/workflows/: release.yml
electron/: hfScript.js  main.js  preload.js
src/: App.css  App.jsx  constants.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs
src/components/: AddProjectModal.jsx  Button.jsx  ConsoleOutput.jsx  DeleteBranchPanel.jsx  Header.jsx  HotfixPanel.jsx  ModeTabs.jsx  NewBranchPanel.jsx  ProjectSelector.jsx  UpdateOverlay.jsx
~/.tauri/: hotfixgen.key.pub
